objects/ssot__CaseProceedingComplaint__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseProceedingId__c</fullName>
        <label>Case Proceeding</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplaintId__c</fullName>
        <label>Complaint</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Proceeding Complaint Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549026695_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceedingComplaint_ComplaintId__rel</label>
        <referenceTo>ssot__Complaint__dlm</referenceTo>
        <relationshipLabel>CaseProceedingComplaint_ComplaintId__rel</relationshipLabel>
        <relationshipName>rel_1718549026695_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549030969_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceedingComplaint_CaseProceedi_rel</label>
        <referenceTo>ssot__CaseProceeding__dlm</referenceTo>
        <relationshipLabel>CaseProceedingComplaint_CaseProceedi_rel</relationshipLabel>
        <relationshipName>rel_1718549030969_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>